0.10 200911xx
    . implemented ->form_name, ->form_id, ->form_number
    . unified API between ->find_link, ->selector, ->xpath
    
0.09 20091111
    . Allow ->eval_in_page() to specify an overriding
      environment, for example to override alert()

0.08 20091109
    . Make tests warn if I suspect that Javascript is
      blocked by Noscript. This makes some tests fail.
    . Require latest MozRepl::RemoteObject for sane encoding handling.

0.07 20091106
    . added ->eval_in_page() to evaluate Javascript in
      the context of the page
    . added better frame / iframe handling.
    o Frame/iframes don't play well with data: URLs.

0.06 20091102
    . added 'autoclose' parameter to specify whether the
      tab that mechanize creates gets automatically closed upon
      object release
    . added ->content_as_png() to save the current page
      as PNG
    . Added 'single' option to ->selector() and ->xpath()
    . Added capture of arbitrary rectangles to ->content_as_png()
    . added ->find_link APIs
    . added ->find_link tests from WWW::Mechanize
    . added sending of focus/change/blur events and API

0.05 20091030
    . Added HTTP::Cookies::MozRepl to allow for live cookie querying
    . Added ->cookies method for cookie access

0.04 20091029
    . Added ->set_visible
    . Added ->value (partly buggy with respect to event triggering)
    . added log passthrough parameter

0.03 20091028
    . Added missing MIME::Base64 prerequisite
    . Now has WWW::Mechanize as a prerequisite
    . Also requires MozRepl::RemoteObject 0.2 due to the changed call
      interface and introduction of ->declare for caching.

0.02 20091027
    . rearranged documentation
    . made tests skip if we can't connect to MozRepl

0.01 20091026
    . Released unto a propably suspecting audience