@@ -27,7 +27,10 @@ t/53-mech-capture-js-error.t
 t/53-mech-capture-js-noerror.html
 t/60-mech-cookies.t
 t/70-mech-png.t
+t/70-rt71216.html
 t/70-rt71216.t
+t/70-tag-team.t
+t/70-two-instances.t
 t/99-manifest.t
 t/99-pod.t
 t/99-todo.t
